UI: Fix squashed supplier cards layout in product details view by adding flex-col utility

--- a/css/styles.css
+++ b/css/styles.css
@@ -101,9 +101,14 @@ main {
     display: flex;
 }
 
+.flex-col {
+    flex-direction: column;
+}
+
 .items-center {
     align-items: center;
 }
+
 
 .justify-between {
     justify-content: space-between;
